k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-go-app
  labels:
    app: web-go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-go-app
  template:
    metadata:
      labels:
        app: web-go-app
    spec:
      containers:
      - name: web-go-app
        image: reddy2705/web-go-app:v1
        ports:
        - containerPort: 8080
