k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-go-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
